--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Amantes de Imagine Dragons es una pagina que esta enfocada en dar mas visibilidada a esta banda, aportando informacion sobre ella">
+    <meta name="keywords" content="Imagine Dragons, Musica, Caciones">
     <link rel="shortcut icon" href="assets/img/imagen 2.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="assets/css/index.css">
     <title>Amante de Imagine Dragons - Inicio</title>
 </head>
 
